[package]
name = "page"
version = "1.0.0-rc.2"
authors = ["Christian Stefanescu <chris@0chris.com>", "Dominic Ward <dom@deeuu.me>"]
edition = "2018"
description = "A password manager with age encryption"
license = "MIT"
repository = "https://www.github.com/deeuu/page"
readme = "README.md"
keywords = ["cli", "encryption", "age", "password", "manager"]
categories = ["command-line-utilities", "cryptography"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
age = "0.10.0"
anyhow = "1.0"
rpassword = "5.0"
lazy_static = "1.4"
clipboard = "0.5"
directories-next = "2.0"
toml = "0.5"
serde =  {version = "1.0", features=["derive"]}
keyring = "0.10"
whoami = "1.1"
clap = { version = "4.2.2", features = ["derive"]}

[target.'cfg(unix)'.dependencies]
fork = "0.1"

[dev-dependencies]
assert_cmd = "1.0"
predicates = "1.0"
tempfile = "3.2"
