[package]
name = "page"
version = "1.2.0"
authors = ["Christian Stefanescu <chris@0chris.com>", "Dominic Ward <dom@deeuu.me>"]
edition = "2018"
description = "A password manager with age encryption"
license = "MIT"
repository = "https://www.github.com/deeuu/page"
readme = "README.md"
keywords = ["cli", "encryption", "age", "password", "manager"]
categories = ["command-line-utilities", "cryptography"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
age = "0.11.1"
anyhow = "1.0"
rpassword = "5.0"
lazy_static = "1.4"
directories-next = "2.0"
toml = "0.5"
serde =  {version = "1.0", features=["derive"]}
keyring = "0.10"
whoami = "1.1"
clap = { version = "4.2.2", features = ["derive"]}
arboard = "3.3.2"
clap_complete = "4.5.46"
clap_complete_nushell = "4.5.5"

[target.'cfg(unix)'.dependencies]
fork = "0.1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["errhandlingapi"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "1.0"
tempfile = "3.2"
